--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -16,19 +16,85 @@
 
 }
 
-.singlePic{
-  width:70%;
+.singlePicHolder{
+  width: 70%;
+  height: 920px;
+  position: relative;
+}
+.singlePicHolder .singlePic{
+  width:100%;
   height:100%;
-
+  overflow: hidden;
+  position: relative;
 }
 
+.singlePicHolder .singlePic .picture{
+  /* width: 100%; */
+  position: relative;
+  height: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+}
 
-.singlePic img {
-    object-fit: cover;
+.singlePicHolder .singlePic .backgroundPic {
+    /* object-fit: cover; */
     width: 100%;
     height: 100%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    filter: blur(20px);
+    overflow: hidden;
+    /* -webkit-filter: blur(20px); */
+    z-index: 0;
+
 }
 
+.singlePicHolder .singlePic .clipPicturesRoll{
+  position: relative;
+  overflow: hidden;
+  height: 920px;
+  width: 85%;
+  background-color: white;
+  left: 50%;
+  transform: translateX(-50%);
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+
+  /* box-shadow: 0 0px 0px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
+  /* border-radius: 10px; */
+  z-index: 10;
+}
+
+.singlePicHolder .singlePic .clipPicturesRoll .ownerHolder{
+  position: absolute;
+  left: 7.5%;
+  top: 5%;
+  display: flex;
+}
+.singlePicHolder .singlePic .clipPicturesRoll .ownerHolder .ownerName{
+  position: relative;
+  left: 10%;
+}
+
+.singlePicHolder .singlePic .clipPicturesRoll .polaroidHolder{
+  position: relative;
+  object-fit: cover;
+
+  left: 50%;
+  top: 15%;
+  transform: translateX(-50%);
+  /* border: 1px solid gray; */
+  height: 80%;
+  overflow: hidden;
+  width: 85%;
+  /* background-color: red; */
+}
+.singlePicHolder .singlePic .clipPicturesRoll .polaroidHolder .socialImages{
+  position: relative;
+  height: 100%;
+  left: 50%;
+  transform: translateX(-50%)
+}
 
 .exitX{
   color: white;
