some 3 dot fixes

--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -591,6 +591,12 @@
   position: relative;
 }
 
+.clipPicBackground .threeDot{
+  position: absolute;
+  right: 0%;
+
+}
+
 .clipPicBackground .backgroundPic {
   position: absolute;
   /* height: %; */
