--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -7,6 +7,23 @@ width: 100%;
   width: 33%; height: 400px; float: left; background: green;
 }
 
+.testModal{
+
+    overflow: hidden;
+    width:1200px;
+    height:800px;
+    top:25%;
+    left:25%;
+    background: white;
+    line-height: 150%;
+    border-radius: 15px;
+
+    box-shadow:  0 10px 50px rgba(0, 0, 0, 0.13);
+    font-family: 'Segoe UI Regular';
+
+
+
+}
 
 .cardAlign{
   position: absolute;
