--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -166,8 +166,8 @@
   bottom: 0px;
   height: 100%;
   width: 30%;
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
 
 
   /* width: 100%; */
@@ -394,8 +394,8 @@
 
 .commentEventHolder .socialCommentBoxBox{
   position: relative;
-  height: 80%;
-  max-height: 55%;
+  height: 55%;
+  /* max-height: 55%; */
   width: 100%;
   overflow:hidden;
   /* display: flex; */
