--- a/frontend/src/containers/SocialCalendarFolder/SocialEventPage/SocialEventPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialEventPage/SocialEventPage.css
@@ -65,6 +65,27 @@
   font-size: 18px;
 }
 
+.noSocialChatContainer{
+  position:relative;
+  top:35%;
+  left:20%;
+  width:200px;
+}
+
+.noSocialChatIcon{
+  position:relative;
+  top:35%;
+  right:20%;
+}
+
+.noSocialChatMessage{
+  position:relative;
+  top:35%;
+  right:50%;
+  font-size: 24px;
+  font-weight: 500;
+}
+
 .socialEventPageContainer.active .showChatWords{
   left: 72.5%;
 }
@@ -91,8 +112,11 @@
   /* background-color: green; */
 }
 
+
+
+
 .socialEventInfoContainerContainer .socialEventInfoContainer{
-  /* background-color: red; */
+  /* background-color: white; */
   width: 100%;
   position: absolute;
   overflow:auto;
@@ -158,6 +182,7 @@
 
 .socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView{
   height: 100%;
+
 }
 
 .socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .topSectContainier{
@@ -228,14 +253,16 @@
 .socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .eventInfo{
   text-align: left;
   height: 100%;
-  padding: 50px 220px;
   transition: 0.5s;
-  background: white;
+  /* background: red; */
 }
+
+
 
 .socialEventInfoContainerContainer.active .socialEventInfoContainer .eventInfoView .eventInfo{
   /* background-color: red; */
-  padding: 50px 100px;
+  padding-top: 50px;
+  padding-left: 10px;
 }
 
 .socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .eventInfo .title{
@@ -243,7 +270,7 @@
 }
 
 .socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .eventInfo .aboutEvent{
-  font-size: 30px;
+
   color: black;
   margin-bottom: 30px;
 }
