--- a/frontend/src/containers/SocialCalendarFolder/SocialEventPage/SocialEventPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialEventPage/SocialEventPage.css
@@ -114,6 +114,28 @@
   /* background-color: green; */
 }
 
+.socialEventStatistics{
+  position:relative;
+  font-weight: 500;
+  color:black;
+
+}
+
+.socialEventStatisticFont{
+  color:black;
+
+  font-weight: 700;
+}
+
+.socialEventHeader{
+    color: black;
+    font-size: 18px;
+    line-height: 150%;
+    position:relative;
+
+    bottom:-10px;
+
+}
 
 
 
@@ -191,11 +213,11 @@
   display: flex;
 
 }
-
+/* gray container */
 .socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .topSectContainier .eventTopSide{
-  width: 35%;
+  width: 45%;
   height: 400px;
-  padding: 25px;
+  padding: 50px;
   background-color: #F5F5F5;
 }
 
@@ -227,16 +249,17 @@
 
 
 .socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .topSectContainier .eventBackgroundPic{
-  width: 65%;
+  width: 50%;
   height: 400px;
   border: 10px dashed gainsboro;
   text-align: center;
 }
 
 .socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .topSectContainier .eventBackgroundWPic{
-  width: 65%;
+  width: 50%;
   height: 400px;
   overflow: hidden;
+  border-radius: 10px;
   /* border: 10px dashed gainsboro; */
   text-align: center;
 }
@@ -248,7 +271,7 @@
 .socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .topSectContainier .eventBackgroundPic .pictureFrame{
   position: relative;
   top: 28%;
-  font-size: 55px;
+  font-size: 35px;
   color: gainsboro;
 }
 
