figured out the height for the soical cal day caption as well

--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -390,9 +390,9 @@
   /* display: flex; */
   /* padding-top: 10px; */
 }
-.commentEventHolder.hasCaption{
+/* .commentEventHolder.hasCaption{
   height: 81%;
-}
+} */
 
 .commentEventHolder .socialCommentBoxBox{
   position: relative;
