added some css in for the caption

--- a/frontend/src/components/PostPageFolder/UserPostPage.css
+++ b/frontend/src/components/PostPageFolder/UserPostPage.css
@@ -54,6 +54,11 @@
   height: 100%;
   width: 30%;
 }
+.postModalRight .caption{
+  position: relative;
+  padding-left: 5%;
+}
+
 .postModalRight .postNameTag{
   /* background-color: green; */
   height: 80px;
