--- a/frontend/src/containers/NewChatFolder/NewChat.css
+++ b/frontend/src/containers/NewChatFolder/NewChat.css
@@ -6,7 +6,7 @@
   height: 92.5vh;
   width: 100%;
   top: 30%;
-  left: 4%;
+  left: 3.8%;
   display: flex;
 }
 
@@ -129,6 +129,7 @@
   width: 100%;
   position:relative;
   display: flex;
+  margin-bottom: 10px;
 }
 .createChatButtonContainer{
   /* background-color: red; */
@@ -138,26 +139,24 @@
   /* background-color: red; */
   position:relative;
   height: 100%;
-  width: 80%;
+  width: 90%;
   padding-left: 5px;
 }
 .manageChatForm .searchInput{
   position: relative;
   top: 20px;
-  left: 1%;
+  left:1%;
   box-sizing: border-box;
   width: 100%;
   height: 60%;
-  border-radius: 25px;
+  border-radius: 15px;
   background-color: whitesmoke;
 }
 .newManageChatHeader .addChatsButton{
   /* background-color: red; */
   position:relative;
-  padding-top: 4px;
   font-size: 2.2vw;
-  color: #383838;
-  width: 20%;
+  width: 15%;
   text-align: center;
   cursor: pointer;
 }
@@ -251,7 +250,8 @@
 /* This is for the chat content page */
 .chatContainer .chatRightSide .newChatContent{
   background-color: white;
-  border: 1px solid gray;
+  border-right: 1px solid #f0f0f0;
+  border-left: 1px solid #f0f0f0;
   height: 92%;
   position: relative;
 }
@@ -316,7 +316,7 @@
   color: #f5f5f5;
   float: right;
   font-size: 15px;
-  font-weight: 400;
+    margin-top: -20px;
 }
 
 
@@ -326,7 +326,7 @@
   /* display: inline-block; */
   display:flex;
   padding: 10px 15px;
-  margin: 2px 15px 5px 15px;
+  margin-top: -20px;
   border-radius: 20px;
   max-width: 350px;
   /* line-height: 130%; */
