--- a/frontend/src/containers/NewChatFolder/NewChat.css
+++ b/frontend/src/containers/NewChatFolder/NewChat.css
@@ -249,10 +249,12 @@
 
 /* This is for the chat content page */
 .chatContainer .chatRightSide .newChatContent{
+  margin-top: 50px;
   background-color: white;
+  border-top: 1px solid #f0f0f0;
   border-right: 1px solid #f0f0f0;
   border-left: 1px solid #f0f0f0;
-  height: 92%;
+  height: 95%;
   position: relative;
 }
 .chatContainer .chatRightSide .newChatContent .chatWrapContainer{
@@ -366,7 +368,7 @@
   bottom: 0px;
   height: 7.5%;
   width: 100%;
-  border: 1px solid grey;
+  border-top: 1px solid #f0f0f0;
   /* background-color: red; */
 }
 
