--- a/frontend/src/containers/NewChatFolder/ChatManagerFolder/ChatManager.css
+++ b/frontend/src/containers/NewChatFolder/ChatManagerFolder/ChatManager.css
@@ -11,7 +11,7 @@
   /* background-color: red; */
   /* overflow: auto; */
   /* height: 500px; */
-  width: 40%;
+
 }
 
 .chatEventShare .chatEventShareLeft .searchChatContainer {
@@ -32,6 +32,7 @@
   margin-top: 15px;
   overflow: hidden;
   height: 465px;
+  width:300px;
 }
 
 .chatEvent{
