--- a/frontend/src/containers/NewChatFolder/NewChat.css
+++ b/frontend/src/containers/NewChatFolder/NewChat.css
@@ -201,7 +201,7 @@
   text-align: center;
   position: relative;
   top: 5%;
-  height:100%;
+  height:60%;
 
 }
 .chatContainer .chatFarRightSide .chatManagerContainer .chatGroupBox{
@@ -236,7 +236,7 @@
   position:absolute;
 
   bottom: 10%;
-  height:250px;
+  height:100px;
   /* overflow-y: auto; */
   margin-left: 20px;
   width: 88%;
@@ -367,7 +367,7 @@
   width: 50%;
   left: 44%;
   bottom: 35px;
-  font-size: 18px;
+  font-family: 'Segoe UI Regular';
   /* background-color: blue; */
 }
 .chatContainer .chatRightSide .newChatContent .bottomBox{
