fix notifications descriptions

--- a/frontend/src/containers/Container_CSS/Notifications.css
+++ b/frontend/src/containers/Container_CSS/Notifications.css
@@ -16,7 +16,7 @@
   /* background-color: red; */
 }
 
-.notificationListContainer .listNotificationSingle {
+.listNotificationSingle {
   /* This is for the notifications that do not have a button */
   position: relative;
   top: 25%;
