--- a/frontend/src/components/PostPageFolder/UserPostPage.css
+++ b/frontend/src/components/PostPageFolder/UserPostPage.css
@@ -10,6 +10,7 @@
   /* background:red; */
   z-index: 99;
 
+
 }
 
 
@@ -22,7 +23,6 @@
   left: 10%;
   right: 10%;
   z-index: 100;
-
 }
 
 
@@ -41,9 +41,12 @@
 }
 
 .postHolder .postPicturesCarousel .singlePic{
-  position: relative;
+  object-fit: cover;
+  width: 100%;
   height: 100%;
 }
+
+
 
 
 /* This will hold all the information on the right of the modal */
@@ -53,6 +56,7 @@
   bottom: 0px;
   height: 100%;
   width: 30%;
+  border-left: 1px solid #f0f0f0;
 }
 .postModalRight .caption{
   position: relative;
