--- a/frontend/src/containers/Home.css
+++ b/frontend/src/containers/Home.css
@@ -15,3 +15,38 @@
     left:0px;
     z-index:1000;
 }
+.container {
+  width: 100%;
+  margin: auto;
+  padding: 10px;
+}
+
+.one {
+  width: 40%;
+  height: 100%;
+  /* background: red; */
+  float: left;
+}
+
+.two {
+
+  height: 100%;
+  /* background: black; */
+}
+
+
+.loginCircle {
+    /* background: #f00; */
+    border:1px solid blue;
+    width: 500px;
+    height: 500px;
+    border-radius: 50%;
+    left:50%;
+    position:relative;
+}
+
+.loginCircle img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
